; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_serialize.c_serialize_usec.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_serialize.c_serialize_usec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USEC_INFINITY = common dso_local global i64 0, align 8
@USEC_FMT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @serialize_usec(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @assert(i8* %8)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @assert(i8* %10)
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* @USEC_INFINITY, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %22

16:                                               ; preds = %3
  %17 = load i8*, i8** %5, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* @USEC_FMT, align 4
  %20 = load i64, i64* %7, align 8
  %21 = call i32 @serialize_item_format(i8* %17, i8* %18, i32 %19, i64 %20)
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %16, %15
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @serialize_item_format(i8*, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
